opam-version: "2.0"
homepage: "https://github.com/issuu/ocaml-mmdb"
dev-repo: "git://git@github.com:issuu/ocaml-mmdb.git"
bug-reports: "https://github.com/issuu/ocaml-mmdb/issues"
author: "@issuu/platypus"
maintainer: "@issuu/platypus"
build: [["dune" "build" "-p" name "-j" jobs]]
run-test: [["dune" "runtest" "-p" name "-j" jobs]]
depends: [
  "ocaml-base-compiler" {>= "4.07.1" < "4.08"}
  "dune" {build & >= "1.7"}
  "ocamlformat" {build}
  "base" {>= "v0.11" < "v0.12"}
  "ctypes" {>= "0.14" < "0.15"}
  "ctypes-foreign" {>= "0.4" < "0.5"}
]
synopsis: "MaxMind DB library for OCaml based on ocaml-ctypes and stub generation"
