opam-version: "2.0"
homepage: "https://issuu.github.io/ocaml-mmdb"
dev-repo: "git+https://github.com/issuu/ocaml-mmdb.git"
bug-reports: "https://github.com/issuu/ocaml-mmdb/issues"
author: "Martin Slota <msl@issuu.com>"
maintainer: "Team Platypus <platypus@issuu.com>"
build: [["dune" "build" "-p" name "-j" jobs]]
run-test: [["dune" "runtest" "-p" name "-j" jobs]]
depends: [
  "dune" {build & >= "1.7"}
  "core" {>= "v0.11" < "v0.12"}
  "ctypes" {>= "0.14" < "0.15"}
  "ctypes-foreign" {>= "0.4" < "0.5"}
  "ppx_let" {>= "v0.11" < "v0.12"}
  "ppx_deriving" {>= "4.2" < "5.0"}
]
synopsis: "MaxMind DB library for OCaml based on ocaml-ctypes and stub generation"
